[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rrjr_py"
version = "0.1.0"
dynamic 

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}